syntax = "proto3";

option go_package = "./;proto";

package proto;

import "google/protobuf/timestamp.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service UserService {
  rpc GetUsers(GetUsersRequest) returns(GetUsersReply) {}
  rpc GetUser(GetUserRequest) returns(GetUserReply) {}
  rpc GetUserByLogin(GetUserByLoginRequest) returns(GetUserByLoginReply) {}
  rpc IsLoginUnique(IsLoginUniqueRequest) returns(IsLoginUniqueReply){}
  rpc DeleteUserById(DeleteUserByIdRequest) returns(DeleteUserByIdReply) {}
  rpc UpdateUser(UpdateUserRequest) returns(UpdateUserReply) {}
  rpc UploadUserAvatar(UploadUserAvatarRequest) returns(UploadUserAvatarReply) {}
  rpc DeleteUserAvatar(DeleteUserAvatarRequest) returns(DeleteUserAvatarReply) {}
  rpc CreateUser(CreateUserRequest) returns(CreateUserReply) {}
}

message User {
  uint32 id = 1;
  string firstname = 2;
  string surname = 3;
  string patronymic = 4;
  string gender = 5;
  google.protobuf.Timestamp birthday = 6;
  string login = 7;
  string password = 8;
  string avatar = 9;
  string phone_number = 10;
  string description = 11;
}

message GetUsersRequest {

}

message GetUsersReply {
  repeated User users = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserReply {
  User user = 1;
}

message GetUserByLoginRequest {
  string login = 1;
  string password = 2;
}

message GetUserByLoginReply {
  User user = 1;
}

message IsLoginUniqueRequest {
  string login = 1;
}

message IsLoginUniqueReply {
  bool status = 1;
}

message DeleteUserByIdRequest {
  uint32 id = 1;
}

message DeleteUserByIdReply {
  bool status = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserReply {
  User user = 1;
}

message UploadUserAvatarRequest {
  uint32 id = 1;
  string avatar = 2;
}

message UploadUserAvatarReply {

}

message DeleteUserAvatarRequest {
  uint32 id = 1;
}

message DeleteUserAvatarReply {
  bool status = 1;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserReply {
  User user = 1;
}